语言菜单栏初步完成

--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -33,19 +33,43 @@
 					</a>
 				</div>
 
-				<div class="nav-item mao">
+				<!-- <div class="nav-item mao">
 					<a id="tokenregister" href="https://token.lambda.im/#/register">
 						<%=lang.head.menu6%>
 					</a>
+				</div> -->
+
+				<div class="nav-item language">
+					<div class="title-wrapper">
+						<div class="lang-flag">
+							<img src="<%= require('../../img/index/en.svg') %>" alt="">
+						</div>
+						<span class="lang">English</span>
+						<div class="arrow"></div>
+					</div>
+					<div class="lang-wrapper">
+
+						<div class="lang-item">
+							<div class="lang-flag">
+								<img src="<%= require('../../img/index/cn.svg') %>" alt="">
+							</div>
+							<span class="lang">
+								<a href="">中文</a>
+							</span>
+						</div>
+
+						<div class="lang-item">
+							<div class="lang-flag">
+								<img src="<%= require('../../img/index/cn.svg') %>" alt="">
+							</div>
+							<span class="lang">
+								<a href="">英文</a>
+							</span>
+						</div>
+						
+					</div>
 				</div>
 
-				<div class="nav-item">
-					<a class="language">lang</a>
-					<ul class="lang">
-						<li>English</li>
-						<li>Russia</li>
-					</ul>
-				</div>
 			</div>
 			<div class="navbar-toggle-btn">
 				<span class="bar"></span>
@@ -56,33 +80,39 @@
 				<div class="nav-item active" id="products" style="border-top: 1px solid rgba(255,255,255,.2)">
 					<ul>
 						<li class="mao">
-							<a href="javascript:;"><%=lang.head.menu1%></a>
+							<a href="javascript:;">
+								<%=lang.head.menu1%></a>
 						</li>
 						<li class="mao">
-							<a href="javascript:;"><%=lang.head.menu2%></a>
+							<a href="javascript:;">
+								<%=lang.head.menu2%></a>
 						</li>
 						<li class="mao">
-							<a href="javascript:;"><%=lang.head.menu3%></a>
+							<a href="javascript:;">
+								<%=lang.head.menu3%></a>
 						</li>
 						<li class="mao">
-							<a href="javascript:;"><%=lang.head.menu4%></a>
+							<a href="javascript:;">
+								<%=lang.head.menu4%></a>
 						</li>
 						<li class="mao">
-							<a href="javascript:;"><%=lang.head.menu5%></a>
+							<a href="javascript:;">
+								<%=lang.head.menu5%></a>
 						</li>
 						<li class="mao">
-							<a href="https://token.lambda.im/#/register"><%=lang.head.menu6%></a>
+							<a href="https://token.lambda.im/#/register">
+								<%=lang.head.menu6%></a>
 						</li>
 					</ul>
 				</div>
 				<div class="nav-item" id="language">
 					<ul>
-							<li class="mao">
-									<a href="https://www.lambda.im/en">English</a>
-							</li>
-							<li class="mao">
-									<a href="https://www.lambda.im/ru">Russia</a>
-							</li>
+						<li class="mao">
+							<a href="https://www.lambda.im/en">English</a>
+						</li>
+						<li class="mao">
+							<a href="https://www.lambda.im/ru">Russia</a>
+						</li>
 					</ul>
 				</div>
 			</div>
