--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -5,6 +5,75 @@
 		<div class="container">
 			<div class="swiper-container">
 				<div class="swiper-wrapper">
+					<div class="swiper-slide container new">
+
+						<div class="col-lg-12">
+							<div class="col-lg-6">
+								<h2>Lambda ICO is coming on 9.19!</h2>
+								<h3>A disruptor in Blockchain-Based storage Solution Providing Unlimited Storage Capabilitis</h2>
+								<video src="https://www.lambda.im/assets/video/1537251347221346.mp4"   muted="muted" width="300px" height="210px"></video>
+							</div>
+
+							<div class="col-lg-6">
+								<div class="time">
+									<span class="size day"></span>
+									<span class="size hour"></span>
+									<span class="size minute"></span>
+									<span class="size seconds"></span>
+								</div>
+								<div class="introduce">
+									<h3>ICO will start at September 19.2018(14:00 GMT)</h3>
+									<h3>ICO will end at September 25.2018(14:00 GMT),or before if hard cap is reached</h3>
+								</div>
+								<button class="btn">Click here for ICO contribution</button>
+							</div>
+						</div>
+
+						<div class="col-lg-12 bottom">
+							<h3>Lambda is founded by 23 Top VCs</h3>
+							<div class="partners-wrapper col-lg-12">
+
+								<div class="partner col-lg-2">
+									<div class="partners-logo partners-logoyfy">
+										<img class="yfy" src="<%= require('../../img/partner/Bitman.png') %>" alt="Bitman">
+									</div>
+								</div>
+
+								<div class="partner col-lg-2">
+									<div class="partners-logo partners-logoyfy">
+										<img class="yfy" src="<%= require('../../img/partner/1_zhenge.png') %>" alt="zhenge">
+									</div>
+								</div>
+
+								<div class="partner col-lg-2">
+									<div class="partners-logo partners-logoyfy">
+										<img class="yfy" src="<%= require('../../img/partner/2_daduhui.png') %>" alt="daduhui">
+									</div>
+								</div>
+
+								<div class="partner col-lg-2 ">
+									<div class="partners-logo partners-logoyfy">
+										<img class="yfy" src="<%= require('../../img/partner/4_ceyuan.png') %>" alt="ceyuan">
+									</div>
+								</div>
+
+								<div class="partner col-lg-2 ">
+									<div class="partners-logo partners-logoyfy">
+										<img class="yfy" src="<%= require('../../img/partner/6_BlockVC.png') %>" alt="BlockVC">
+									</div>
+								</div>
+
+								<div class="partner more col-lg-1">
+									<a href="#partners">
+										<span class="dot dot1"></span>
+										<span class="dot dot2"></span>
+										<span class="dot dot3"></span>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
 					<div class="swiper-slide container">
 						<div class="col-md-12">
 							<h2 style="margin-bottom: 30px;font-size: 29px;">
@@ -57,6 +126,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="swiper-slide container">
 						<div class="col-md-12">
 							<% if(langType == 'en') {%>
@@ -652,7 +722,9 @@
 
 	<section id="team" class="use team">
 		<div class="container">
-			<h1><%=lang.section9.title1%></h1>
+			<h1>
+				<%=lang.section9.title1%>
+			</h1>
 			<div class="row team-wrapper">
 				<div class="col-md-3 col-xxs-4">
 					<div class="head">
@@ -741,7 +813,9 @@
 					</div>
 				</div>
 			</div>
-			<h1><%=lang.section9.title2%></h1>
+			<h1>
+				<%=lang.section9.title2%>
+			</h1>
 			<div class="row team-wrapper team-wrapper2">
 				<div class="col-md-3 col-xxs-4  ">
 					<div class="head">
@@ -807,7 +881,9 @@
 
 	<section id="partners" class="use partners">
 		<div class="container">
-			<h1><%=lang.section10.title%></h1>
+			<h1>
+				<%=lang.section10.title%>
+			</h1>
 			<div class="row partners-wrapper">
 				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 					<div class="partners-logo partners-logoyfy">
@@ -958,9 +1034,9 @@
 		</div>
 	</section>
 
-	<div class="star-field">
+	<!-- <div class="star-field">
 		<div class="layer"></div>
 		<div class="layer"></div>
 		<div class="layer"></div>
-	</div>
+	</div> -->
 </div>
