--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -8,60 +8,57 @@
 					<div class="swiper-slide container new">
 
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+							<div class="col-lg-6 col-md-8 col-sm-7 col-xs-10">
 								<h2>Lambda ICO is coming on 9.19!</h2>
-								<h3>A disruptor in Blockchain-Based storage Solution Providing Unlimited Storage Capabilitis</h2>
-								<video src="https://www.lambda.im/assets/video/1537251347221346.mp4" autoplay="autoplay" loop="loop" controls="controls"  width="350px" height="210px"></video>
-								<div class="btn-tem1 btn">
-										Click here for ICO contribution
-								</div>
+								<h3 class="subtitle">A disruptor in Blockchain-Based storage Solution Providing Unlimited Storage Capabilitis</h3>
+								<video class="video" src="https://www.lambda.im/assets/video/1537251347221346.mp4" autoplay="autoplay" loop="loop" controls="controls"></video>
 							</div>
 
-							<div class="col-lg-6 col-md-6 col-sm-7 col-xs-7">
+							<div class="col-lg-6 col-md-4 col-sm-5 col-xs-8">
 								<div id="time" class="countdown"></div>
 								<div class="introduce">
 									<h3>ICO will start at September 19.2018(14:00 GMT)</h3>
 									<h3>ICO will end at September 25.2018(14:00 GMT),or before if hard cap is reached</h3>
 								</div>
-								<button class="btn btn-tem">Click here for ICO contribution</button>
+								<a class="btn-tem1 trigger">Go contribution！</a>
 							</div>
 						</div>
 
 						<div class="col-lg-12 col-md-12 col-sm-12  col-xs-12 bottom">
-							<h3>Lambda is founded by 23 Top VCs</h3>
-							<div class="partners-wrapper col-lg-12 col-md-12 col-sm-12  col-xs-12">
+							<h3 class="subtitle2">Lambda is founded by 23 Top VCs</h3>
+							<div class="part-wrapper col-lg-12 col-md-12 col-sm-12  col-xs-12">
 
-								<div class="partner col-lg-2 col-md-2 col-xs-2 col-sm-2">
+								<div class="part col-lg-2 col-md-2 col-xs-2 col-sm-2">
 									<div class="partners-logo partners-logoyfy">
 										<img class="yfy" src="<%= require('../../img/partner/Bitman.png') %>" alt="Bitman">
 									</div>
 								</div>
 
-								<div class="partner col-lg-2 col-md-2 col-xs-2 col-sm-2">
+								<div class="part col-lg-2 col-md-2 col-xs-2 col-sm-2">
 									<div class="partners-logo partners-logoyfy">
 										<img class="yfy" src="<%= require('../../img/partner/1_zhenge.png') %>" alt="zhenge">
 									</div>
 								</div>
 
-								<div class="partner col-lg-2 col-md-2 col-xs-2 col-sm-2">
+								<div class="part col-lg-2 col-md-2 col-xs-2 col-sm-2">
 									<div class="partners-logo partners-logoyfy">
 										<img class="yfy" src="<%= require('../../img/partner/2_daduhui.png') %>" alt="daduhui">
 									</div>
 								</div>
 
-								<div class="partner col-lg-2 col-md-2 col-xs-2 col-sm-2">
+								<div class="part col-lg-2 col-md-2 col-xs-2 col-sm-2">
 									<div class="partners-logo partners-logoyfy">
 										<img class="yfy" src="<%= require('../../img/partner/4_ceyuan.png') %>" alt="ceyuan">
 									</div>
 								</div>
 
-								<div class="partner col-lg-2 col-md-2 col-xs-2 col-sm-2">
+								<div class="part col-lg-2 col-md-2 col-xs-2 col-sm-2">
 									<div class="partners-logo partners-logoyfy">
 										<img class="yfy" src="<%= require('../../img/partner/6_BlockVC.png') %>" alt="BlockVC">
 									</div>
 								</div>
 
-								<div class="partner more col-lg-1 col-md-1 col-xs-1 col-sm-1">
+								<div class="part more col-lg-1 col-md-1 col-xs-1 col-sm-1">
 									<a href="#partners">
 										<span class="dot dot1"></span>
 										<span class="dot dot2"></span>
@@ -1032,9 +1029,9 @@
 		</div>
 	</section>
 
-	<!-- <div class="star-field">
+	<div class="star-field">
 		<div class="layer"></div>
 		<div class="layer"></div>
 		<div class="layer"></div>
-	</div> -->
+	</div>
 </div>
