修改投资者logo

--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -28,9 +28,9 @@
 							<h3 class="subtitle2">Lambda is founded by 23 Top VCs</h3>
 							<div class="part-wrapper col-lg-12 col-md-12 col-sm-12  col-xs-12">
 
-								<div class="part col-lg-2 col-md-2 col-xs-2 col-sm-2">
+								<div class="part col-lg-2 col-md-2 col-xs-2 col-sm-2" >
 									<div class="partners-logo partners-logoyfy">
-										<img class="yfy" src="<%= require('../../img/partner/Bitman.png') %>" alt="Bitman">
+										<img class="bitman" style="height:20px;"  src="<%= require('../../img/partner/Bitman.png') %>" alt="Bitman">
 									</div>
 								</div>
 
