--- a/src/css/page/index.less
+++ b/src/css/page/index.less
@@ -159,14 +159,29 @@ section.banner-contents {
         }
         .part-wrapper {
           .part {
-            height: 50px;
-            img {
-              width: 100%;
-              height: 30px;
+            .partners-logo {
+              text-align: center;
+              background-color: rgba(255, 255, 255, 0.2);
+              height: 50px;
+              line-height: 50px;
+              
+              img {
+                height: 30px;
+                max-width: 100%;
+              }
+              .bitman{
+                width: 80px;
+                vertical-align: middle;
+              }
+              .yfy {
+                height: 30px;
+                vertical-align: middle;
+              }
             }
           }
         }
         .more {
+          height: 50px;
           // background:rgba(255,255,255,.1);
           a {
             position: relative;
