--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -8,13 +8,13 @@
 					<div class="swiper-slide container new">
 
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<div class="col-lg-6 col-md-8 col-sm-7 col-xs-10">
+							<div class="col-lg-8 col-md-8 col-sm-7 col-xs-10 row1">
 								<h2>Lambda ICO is coming on 9.19!</h2>
 								<h3 class="subtitle">A disruptor in Blockchain-Based storage Solution Providing Unlimited Storage Capabilitis</h3>
 								<video class="video" src="https://www.lambda.im/assets/video/1537251347221346.mp4" autoplay="autoplay" loop="loop" controls="controls"></video>
 							</div>
 
-							<div class="col-lg-6 col-md-4 col-sm-5 col-xs-8">
+							<div class="col-lg-4 col-md-4 col-sm-5 col-xs-8 row2">
 								<div id="time" class="countdown"></div>
 								<div class="introduce">
 									<h3>ICO will start at September 19.2018(14:00 GMT)</h3>
@@ -226,11 +226,11 @@
 				<p style="opacity:0.8;font-size:14px;text-align: left;    width: 90%">
 					<%=lang.section2.introduce%>
 				</p>
-				<div class="col-xs-12">
+				<!-- <div class="col-xs-12">
 					<img width="50%" alt="demo pdp" src="<%= require('../../img/demo/pdp.jpg') %>">
-				</div>
+				</div> -->
 				<p style="opacity:0.8;font-size:14px;text-align: left;    width: 90%">
-					<a style="padding: 6px" class="btn sendBtn" href="https://github.com/LambdaIM/demo" target="_blank">
+					<a style="padding: 6px" class="btn sendBtn" href="http://demo.lambda.im/" target="_blank">
 						<%=lang.section2.btnName%></a>
 				</p>
 			</div>
@@ -1029,9 +1029,9 @@
 		</div>
 	</section>
 
-	<div class="star-field">
+	<!-- <div class="star-field">
 		<div class="layer"></div>
 		<div class="layer"></div>
 		<div class="layer"></div>
-	</div>
+	</div> -->
 </div>
