--- a/src/css/page/index.less
+++ b/src/css/page/index.less
@@ -664,6 +664,10 @@ section.partners {
   .row1{
     max-width: 600px;
   }
+  .video{
+    width: 300px;
+    height: 145px;
+  }
 }
 @media (max-width: 1441px) {
   section.banner-contents {
