--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -20,7 +20,7 @@
 									<h3>ICO will start at September 19.2018(14:00 GMT)</h3>
 									<h3>ICO will end at September 25.2018(14:00 GMT),or before if hard cap is reached</h3>
 								</div>
-								<a class="btn-tem1" href="" id="contribute">Go contribution！</a>
+								<a class="btn-tem1" href="https://token.lambda.im/#/register" id="contribute">Go contribution！</a>
 							</div>
 						</div>
 
