修改部分文案

--- a/src/css/page/index.less
+++ b/src/css/page/index.less
@@ -662,7 +662,7 @@ section.partners {
     width: 1200px;
   }
   .row1{
-    max-width: 600px;
+    // max-width: 700px;
   }
   .video{
     width: 300px;
@@ -877,7 +877,7 @@ section.partners {
   }
   .firstbgimg {
     .swiper-container {
-      min-height: 500px;
+      min-height: 700px;
       .video{
         width: 220px;
         height: 100px;
