--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -10,15 +10,17 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<div class="col-lg-8 col-md-8 col-sm-7 col-xs-10 row1">
 								<h2>Lambda ICO is coming on 9.19!</h2>
-								<h3 class="subtitle">A disruptor in Blockchain-Based storage Solution Providing Unlimited Storage Capabilitis</h3>
-								<video class="video" src="https://www.lambda.im/assets/video/1537251347221346.mp4" autoplay="autoplay" loop="loop" controls="controls"></video>
+								<h4>Offical wallet ETH Adress：0xf12f3F09010336F3677E8AC4e18a71650e634820</h4>
+								<span>*Only trust the information from our official website and from our official Telegram group : <a style="color:#3cdcd1" target="_blank" href="https://t.me/HelloLambda">https://t.me/HelloLambda</a>,Please don’t use any exchange wallets or contribute without whitelist.<span>									
+								<video class="video in" src="https://www.lambda.im/assets/video/1537251347221346.mp4" controls="controls"></video>
+								<iframe class="video out" src="https://www.youtube.com/embed/O6olM_dry08" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 
 							<div class="col-lg-4 col-md-4 col-sm-5 col-xs-8 row2">
 								<div id="time" class="countdown"></div>
 								<div class="introduce">
-									<h3>ICO will start at September 19.2018(14:00 GMT)</h3>
-									<h3>ICO will end at September 25.2018(14:00 GMT),or before if hard cap is reached</h3>
+									<h3>Time of Public Sale Start : 14:00 UTC ,19th SEP，2018</h3>
+									<h3>Time of Public Sale End: 14:00 UTC ,2nd OCT，2018,or before if hard cap is reached</h3>
 								</div>
 								<a class="btn-tem1" href="https://token.lambda.im/#/register" id="contribute">Go contribution！</a>
 							</div>
@@ -28,9 +30,9 @@
 							<h3 class="subtitle2">Lambda is founded by 23 Top VCs</h3>
 							<div class="part-wrapper col-lg-12 col-md-12 col-sm-12  col-xs-12">
 
-								<div class="part col-lg-2 col-md-2 col-xs-2 col-sm-2" >
+								<div class="part col-lg-2 col-md-2 col-xs-2 col-sm-2">
 									<div class="partners-logo partners-logoyfy">
-										<img class="bitman" style="height:20px;"  src="<%= require('../../img/partner/Bitman.png') %>" alt="Bitman">
+										<img class="bitman" style="height:20px;" src="<%= require('../../img/partner/Bitman.png') %>" alt="Bitman">
 									</div>
 								</div>
 
@@ -1029,9 +1031,9 @@
 		</div>
 	</section>
 
-	<div class="star-field">
+	<!-- <div class="star-field">
 		<div class="layer"></div>
 		<div class="layer"></div>
 		<div class="layer"></div>
-	</div>
+	</div> -->
 </div>
