多语言版本切换完成

--- a/src/css/common/header.less
+++ b/src/css/common/header.less
@@ -87,7 +87,7 @@ header{
 					top:40px;
 					width: 120px;
 					height: 90px;
-					background-color: #ffffff;
+					background-color: rgba(0, 0, 0, 0.7);
 					box-shadow: 0 6px 8px 0 rgba(0,0,0,.12);
 					border-radius: 5px;
 					z-index: -888;
@@ -100,12 +100,12 @@ header{
 							img{
 								position: absolute;
 								left: 20px;
-								top: 10px;
+								top: 8px;
 							}	
 						}
 						.lang{
 							a{
-								color: #000;
+								color: #fff;
 								position: absolute;
 								left: 45px;
 								top: 7px;
