--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -22,51 +22,58 @@
 						<%=lang.head.menu3%>
 					</a>
 				</div>
-				<div class="nav-item mao">
+				<!-- <div class="nav-item mao">
 					<a href="#tokensale">
 						<%=lang.head.menu4%>
 					</a>
-				</div>
-				<div class="nav-item mao">
+				</div> -->
+				<!-- <div class="nav-item mao">
 					<a href="#roadmap">
 						<%=lang.head.menu5%>
 					</a>
-				</div>
+				</div> -->
 
-				<!-- <div class="nav-item mao">
+				<div class="nav-item mao">
 					<a id="tokenregister" href="https://token.lambda.im/#/register">
 						<%=lang.head.menu6%>
 					</a>
-				</div> -->
+				</div>
 
 				<div class="nav-item language">
 					<div class="title-wrapper">
+						<% if(langType == 'en') {%>
 						<div class="lang-flag">
-							<img src="<%= require('../../img/index/en.svg') %>" alt="">
+							<img class="img" src="<%= require('../../img/index/en.svg') %>" alt="">
 						</div>
-						<span class="lang">English</span>
+						<span class="lang title">English</span>
+						<% } else if(langType == 'ru'){ %>
+						<div class="lang-flag">
+							<img class="img" src="<%= require('../../img/index/ru.png') %>" alt="">
+						</div>
+						<span class="lang title">Russia</span>
+						<% } %>
 						<div class="arrow"></div>
 					</div>
 					<div class="lang-wrapper">
 
 						<div class="lang-item">
 							<div class="lang-flag">
-								<img src="<%= require('../../img/index/cn.svg') %>" alt="">
+								<img src="<%= require('../../img/index/ru.png') %>" alt="">
 							</div>
 							<span class="lang">
-								<a href="">中文</a>
+								<a class="ru" href="https://www.lambda.im/ru">Russia</a>
 							</span>
 						</div>
 
 						<div class="lang-item">
 							<div class="lang-flag">
-								<img src="<%= require('../../img/index/cn.svg') %>" alt="">
+								<img src="<%= require('../../img/index/en.svg') %>" alt="">
 							</div>
 							<span class="lang">
-								<a href="">英文</a>
+								<a class="en" href="https://www.lambda.im/en">English</a>
 							</span>
 						</div>
-						
+
 					</div>
 				</div>
 
