完成双语版本的内容同步更新

--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -9,9 +9,9 @@
 
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<div class="col-lg-8 col-md-8 col-sm-7 col-xs-10 row1">
-								<h2>Lambda ICO is coming on 9.19!</h2>
-								<h4>Offical wallet ETH Adress：0xf12f3F09010336F3677E8AC4e18a71650e634820</h4>
-								<span>*Only trust the information from our official website and from our official Telegram group : <a style="color:#3cdcd1" target="_blank" href="https://t.me/HelloLambda">https://t.me/HelloLambda</a>,Please don’t use any exchange wallets or contribute without whitelist.<span>									
+								<h2><%=lang.section1.slide3.title1%></h2>
+								<h4><%=lang.section1.slide3.title2%></h4>
+								<span><%=lang.section1.slide3.introduce1%> <a style="color:#3cdcd1" target="_blank" href="https://t.me/HelloLambda">https://t.me/HelloLambda</a><%=lang.section1.slide3.introduce2%><span>									
 								<video class="video in" src="https://www.lambda.im/assets/video/1537251347221346.mp4" controls="controls"></video>
 								<iframe class="video out" src="https://www.youtube.com/embed/O6olM_dry08" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
@@ -19,15 +19,15 @@
 							<div class="col-lg-4 col-md-4 col-sm-5 col-xs-8 row2">
 								<div id="time" class="countdown"></div>
 								<div class="introduce">
-									<h3>Time of Public Sale Start : 14:00 UTC ,19th SEP，2018</h3>
-									<h3>Time of Public Sale End: 14:00 UTC ,2nd OCT，2018,or before if hard cap is reached</h3>
+									<h3><%=lang.section1.slide3.timeStart%></h3>
+									<h3><%=lang.section1.slide3.timeEnd%></h3>
 								</div>
-								<a class="btn-tem1" href="https://token.lambda.im/#/register" id="contribute">Go contribution！</a>
+								<a class="btn-tem1" href="https://token.lambda.im/#/register" id="contribute"><%=lang.section1.slide3.btnName%></a>
 							</div>
 						</div>
 
 						<div class="col-lg-12 col-md-12 col-sm-12  col-xs-12 bottom">
-							<h3 class="subtitle2">Lambda is founded by 23 Top VCs</h3>
+							<h3 class="subtitle2"><%=lang.section1.slide3.title3%></h3>
 							<div class="part-wrapper col-lg-12 col-md-12 col-sm-12  col-xs-12">
 
 								<div class="part col-lg-2 col-md-2 col-xs-2 col-sm-2">
