--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -3,17 +3,16 @@
 
 	<section class="banner-contents  firstbgimg">
 		<div class="container">
+			<h4 style="text-align: center;font-size: 28px;margin-bottom: 30px;"><%=lang.section1.slide3.title2%></h4>
 			<div class="swiper-container">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide container new">
-
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<div class="col-lg-8 col-md-8 col-sm-7 col-xs-10 row1">
 								<h2><%=lang.section1.slide3.title1%></h2>
-								<h4><%=lang.section1.slide3.title2%></h4>
 								<span><%=lang.section1.slide3.introduce1%> <a style="color:#3cdcd1" target="_blank" href="https://t.me/HelloLambda">https://t.me/HelloLambda</a><%=lang.section1.slide3.introduce2%><span>									
-								<video class="video in" src="https://www.lambda.im/assets/video/1537251347221346.mp4" controls="controls"></video>
-								<iframe class="video out" src="https://www.youtube.com/embed/O6olM_dry08" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								<video class="video in" style="display:none" src="https://www.lambda.im/assets/video/1537251347221346.mp4" controls="controls"></video>
+								<iframe class="video out" style="display:none" src="https://www.youtube.com/embed/O6olM_dry08" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 
 							<div class="col-lg-4 col-md-4 col-sm-5 col-xs-8 row2">
@@ -1031,9 +1030,9 @@
 		</div>
 	</section>
 
-	<!-- <div class="star-field">
+	<div class="star-field">
 		<div class="layer"></div>
 		<div class="layer"></div>
 		<div class="layer"></div>
-	</div> -->
+	</div>
 </div>
