修改英语切换链接

--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -70,7 +70,7 @@
 								<img src="<%= require('../../img/index/en.svg') %>" alt="">
 							</div>
 							<span class="lang">
-								<a class="en" href="https://www.lambda.im/en">English</a>
+								<a class="en" href="https://www.lambda.im">English</a>
 							</span>
 						</div>
 
